@@ -1,0 +1,5 @@
+/**
+ * This utility package provides tools for image manipulation in iRODS.  A specific example is the creation of thumbnail images on the server
+ */
+package org.irods.jargon.datautils.image;
+
