@@ -3,6 +3,7 @@ package org.irods.jargon.datautils.unittest;
 import org.irods.jargon.datautils.connection.ConnectionCreatingPoolableObjectFactoryTest;
 import org.irods.jargon.datautils.connection.TempPasswordCachingProtocolManagerTest;
 import org.irods.jargon.datautils.datacache.DataCacheServiceImplTest;
+import org.irods.jargon.datautils.image.ThumbnailServiceImplTest;
 import org.irods.jargon.datautils.synchproperties.SynchPropertiesServiceImplTest;
 import org.irods.jargon.datautils.tree.FileTreeDiffEntryTest;
 import org.irods.jargon.datautils.tree.FileTreeDiffUtilityTest;
@@ -14,7 +15,9 @@ import org.junit.runners.Suite;
 @Suite.SuiteClasses({ FileTreeDiffEntryTest.class, FileTreeNodeTest.class,
 		FileTreeDiffUtilityTest.class, SynchPropertiesServiceImplTest.class,
 		DataCacheServiceImplTest.class,
-		ConnectionCreatingPoolableObjectFactoryTest.class, TempPasswordCachingProtocolManagerTest.class })
+		ConnectionCreatingPoolableObjectFactoryTest.class,
+		TempPasswordCachingProtocolManagerTest.class,
+		ThumbnailServiceImplTest.class })
 public class AllTests {
 
 }
